@@ -1,4 +1,4 @@
-$Id: README,v 1.10 2012-11-30 18:31:30 pertusus Exp $
+$Id: README,v 1.11 2012-12-02 18:09:33 pertusus Exp $
 texinfo/tp/README
 
   Copyright 2011, 2012 Free Software Foundation, Inc.
@@ -11,7 +11,7 @@ Texinfo::Parser (tp) is a Perl module for parsing Texinfo code into a
 tree representing the Texinfo code structure.
 
 These other modules and libraries are required.  All have been standard
-parts of Perl for years, at least since 5.007003.
+parts of Perl for years, at least since 5.7.3.
   Carp, Config, Data::Dumper, Encode, File::Basename, File::Spec
   Getopt::Long, Unicode::Normalize, Storable
 
