@@ -1,3 +1,11 @@
+2012-12-02  Patrice Dumas  <pertusus@free.fr>
+
+	* configure.ac: remove gnulib module regex snippet, it is already in 
+	gnulib/m4/gnulib-comp.m4.
+	* configure.ac, tp/Texinfo/Convert/Unicode.pm: check that Encode is
+	available, and use perl >= 5.7.3, required for Encode.  Report from 
+	Stefano Lattarini.
+
 2012-12-01  Sergey Poznyakoff  <gray@gnu.org.ua>
 
 	Fix bug #37822 (incomplete redraw of screen).
